<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/rotate_primary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:text="@string/primary_label_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rotate_select_primary"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#0000FF"
        android:onClick="showPicker"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rotate_primary_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rotate_secondary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/secondary_label_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_primary_label" />

    <Button
        android:id="@+id/rotate_select_secondary"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#000000"
        android:onClick="showPicker"
        app:layout_constraintBaseline_toBaselineOf="@+id/rotate_secondary_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/speed_label_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_secondary_label" />

    <SeekBar
        android:id="@+id/speed_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/speed_label"
        app:layout_constraintTop_toBottomOf="@+id/rotate_secondary_label" />
    <TextView
        android:id="@+id/width_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/width_label_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_label" />

    <SeekBar
        android:id="@+id/width_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/speed_label"
        app:layout_constraintTop_toBottomOf="@+id/speed_label" />

</androidx.constraintlayout.widget.ConstraintLayout>